--- a/web/src/app/components/admin-dashboard/components/patientAccount/patient-report/patient-report.component.html
+++ b/web/src/app/components/admin-dashboard/components/patientAccount/patient-report/patient-report.component.html
@@ -174,8 +174,8 @@
         [labels]="lineChartLabels"
         [options]="lineChartOptions"
         [legend]="lineChartLegend"
-        [type]="lineChartType"
         id="pd_healthTrends"
+        [type]="'line'"
       >
       </canvas>
     </div>
