--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -19,9 +19,9 @@ p {
 .main_panel {
   position: relative;
 }
-.charttrends {
-  padding-top: 2rem;
-}
+// .charttrends {
+//   padding-top: 2rem;
+// }
 .content-panel {
   width: 100%;
 }
@@ -971,13 +971,6 @@ p {
 }
 .summary_schedule {
   padding-bottom: 1.5rem;
-}
-.summary_graph_container {
-  height: 20rem !important;
-  width: 100% !important;
-  margin-bottom: 1.87rem;
-  background-color: #ffffff;
-  border-radius: 0.5rem;
 }
 .summary_core_team {
   padding-top: 1.87rem;
@@ -3733,4 +3726,78 @@ li + li {
   border-radius: 8px;
   border: 1px solid #e0e0e0;
   background-color: #f5f5f5;
+}
+// Manjusha code change
+.vital-buttons-item {
+  width: fit-content;
+  height: 2rem;
+  padding: 0.4rem 1.5rem 0.43rem 1.5rem;
+  background-color: #edeff5;
+  border: 1px solid #d8dce5;
+  margin-right: 2px;
+  border-radius: 0.5rem;
+  color: #164d61;
+  font-size: 0.8rem;
+}
+.vital-buttons {
+  background-color: #fff;
+  padding: 8px;
+  border-radius: 0.5rem;
+}
+.activeVital {
+  background-color: #164d61;
+  color: #d8dce5;
+  border: 1px solid #164d61;
+  font-size: 0.8rem;
+  font-family: "Rubik";
+}
+
+.hidden-for-pdf {
+  opacity: 0;
+  height: auto;
+  width: auto;
+  position: absolute;
+  z-index: -1;
+  pointer-events: none;
+}
+.chart-wrapper-scrollfix {
+  position: relative;
+  overflow: hidden;
+  height: 0;
+}
+.summary_graph_container {
+  height: 20rem !important;
+  width: 100% !important;
+  margin-bottom: 1.87rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  position: relative;
+  box-sizing: border-box;
+  padding: 1rem; /* Gives space for axis labels */
+}
+
+#pdfGraph {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+canvas.charttrends {
+  width: 100% !important;
+  height: 100% !important;
+  display: block;
+}
+
+.vital_selected_ {
+  background-color: #164d61;
+  color: #ffffff;
+  outline: none;
+}
+.vital_not_selected {
+  background-color: #e1e6ed;
+  color: #164d61;
+  outline: none;
+}
+.vital_not_selected:hover {
+  background-color: #d8dce5;
 }
