--- a/web/src/app/components/admin-dashboard/components/reports/components/patient-data-report/patient-data-report.component.html
+++ b/web/src/app/components/admin-dashboard/components/reports/components/patient-data-report/patient-data-report.component.html
@@ -128,36 +128,27 @@
     </div>
   </div>
 </app-report-common-layout>
-<div
-  class="summary_graph_container"
-  style="overflow: hidden; visibility: hidden"
->
-  <div
-    id="pdfGraph"
-    style="
-      display: block;
-      width: 100%;
-      height: 98%;
-      visibility: hidden;
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
-    "
-    *ngIf="http_healthtrends"
-  >
-    <canvas
-      class="charttrends"
-      baseChart
-      width="1"
-      height="1"
-      [datasets]="lineChartData"
-      [labels]="lineChartLabels"
-      [options]="lineChartOptions"
-      [legend]="lineChartLegend"
-      id="pd_healthTrends"
-      [type]="'line'"
-    >
-    </canvas>
+<!-- Manjusha code change-->
+<div class="chart-wrapper-scrollfix">
+  <div *ngIf="allLineChartData?.length" class="chart-hidden-container">
+    <div *ngFor="let chartData of allLineChartData; let i = index">
+      <span>{{ healthtrendVitalNameArray[i] }}</span>
+        <div class="summary_graph_container">
+          <div class="pdfData" *ngIf="http_healthtrends">
+            <canvas
+              class="charttrends"
+              baseChart
+              [datasets]="chartData.lineChartData"
+              [labels]="chartData.lineChartLabels"
+              [options]="lineChartOptions"
+              [legend]="lineChartLegend"
+              id="pd_ClinicalHtrends"
+              [type]="'line'"
+            >
+            </canvas>
+          </div>
+        </div>
+    </div>
   </div>
 </div>
 <app-confirm-dialog-panel
