--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_program_details.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_program_details.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background3"
+    android:background="@color/background_grey1"
     tools:context="com.rpm.clynx.fragments.ProgramDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -101,7 +101,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="@dimen/spacing_xmedium"
-                            android:background="@drawable/myinfo_card_bg_radius"
+                            android:background="@drawable/pgm_info_bg"
                             android:gravity="center">
 
                             <TextView
@@ -131,7 +131,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="@dimen/spacing_xmedium"
-                            android:background="@drawable/myinfo_card_bg_radius"
+                            android:background="@drawable/pgm_info_bg"
                             android:gravity="center">
 
                             <TextView
@@ -161,7 +161,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="@dimen/spacing_xmedium"
-                            android:background="@drawable/myinfo_card_bg_radius"
+                            android:background="@drawable/pgm_info_bg"
                             android:gravity="center">
 
                             <TextView
@@ -222,7 +222,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="@dimen/spacing_xmedium"
-                            android:background="@drawable/myinfo_card_bg_radius"
+                            android:background="@drawable/pgm_info_bg"
                             android:gravity="center">
 
                             <TextView
@@ -252,7 +252,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_marginTop="@dimen/spacing_xmedium"
-                            android:background="@drawable/myinfo_card_bg_radius"
+                            android:background="@drawable/pgm_info_bg"
                             android:gravity="center">
 
                             <TextView
