--- a/mobile/android/rpm_android/app/src/main/res/drawable/card_background_green.xml
+++ b/mobile/android/rpm_android/app/src/main/res/drawable/card_background_green.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp" />
-    <solid android:color="@color/light_green_200"/>
+    <solid android:color="@color/chart_scroll_bg"/>
     <!--    <padding android:left="2dp" -->
     <!--        android:top="2dp" android:right="2dp"-->
     <!--        android:bottom="2dp" />-->
