--- a/mobile/android/rpm_android/app/src/main/res/layout/device_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/device_item.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="@dimen/spacing_xmedium"
-            android:background="@drawable/myinfo_card_bg_radius"
+            android:background="@drawable/pgm_info_bg"
             android:gravity="center">
 
             <TextView
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginTop="@dimen/spacing_middle"
-                android:background="@drawable/myinfo_card_bg_radius"
+                android:background="@drawable/pgm_info_bg"
                 android:gravity="center">
 
                 <TextView
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/myinfo_card_bg_radius"
+                android:background="@drawable/pgm_info_bg"
                 android:gravity="center">
 
                 <TextView
@@ -152,7 +152,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="@dimen/spacing_xmedium"
-        android:background="@drawable/myinfo_card_bg_radius"
+        android:background="@drawable/pgm_info_bg"
         android:gravity="center">
 
         <TextView
@@ -182,7 +182,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="@dimen/spacing_xmedium"
-        android:background="@drawable/myinfo_card_bg_radius"
+        android:background="@drawable/pgm_info_bg"
         android:gravity="center">
 
         <TextView
