--- a/mobile/android/rpm_android/app/src/main/res/layout/diagnosis_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/diagnosis_item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/myinfo_card_bg_radius"
+        android:background="@drawable/pgm_info_bg"
         android:orientation="vertical"
         android:padding="10dp">
 
