--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_insurance_details.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_insurance_details.xml
@@ -5,12 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background3"
+    android:background="@color/background_grey1"
     tools:context="com.rpm.clynx.fragments.InsuranceDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/empty_viewInsur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_data_available"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
         <ScrollView
             android:layout_width="match_parent"
@@ -32,7 +44,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginTop="@dimen/margin_10dp"
                         android:layout_marginLeft="@dimen/margin_20dp"
                         android:layout_marginRight="@dimen/margin_20dp"
                         android:orientation="vertical">
@@ -58,14 +70,14 @@
                             tools:listitem="@layout/insurance_item_list"
                             app:layout_constraintTop_toBottomOf="@+id/insno" />
 
-                        <TextView
-                            android:id="@+id/empty_viewInsur"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:visibility="gone"
-                            android:layout_marginTop="10dp"
-                            android:text="@string/no_data_available" />
+<!--                        <TextView-->
+<!--                            android:id="@+id/empty_viewInsur"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:gravity="center"-->
+<!--                            android:visibility="gone"-->
+<!--                            android:layout_marginTop="10dp"-->
+<!--                            android:text="@string/no_data_available" />-->
 
                         <View
                             android:layout_width="match_parent"
