--- a/mobile/android/rpm_android/app/src/main/res/layout/insurance_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/insurance_item.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="@dimen/spacing_xmedium"
-        android:background="@drawable/myinfo_card_bg_radius">
+        android:background="@drawable/pgm_info_bg">
 
         <TextView
             android:id="@+id/itemInsurance"
