--- a/mobile/android/rpm_android/app/src/main/res/layout/vital_schedules_item_list.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/vital_schedules_item_list.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="@dimen/spacing_xmedium"
-                android:background="@drawable/myinfo_card_bg_radius"
+                android:background="@drawable/pgm_info_bg"
                 android:gravity="center">
 
                 <TextView
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="@dimen/spacing_xmedium"
-                android:background="@drawable/myinfo_card_bg_radius"
+                android:background="@drawable/pgm_info_bg"
                 android:gravity="center">
 
                 <TextView
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="@dimen/spacing_middle"
-                android:background="@drawable/myinfo_card_bg_radius"
+                android:background="@drawable/pgm_info_bg"
                 android:gravity="center">
 
                 <TextView
@@ -123,7 +123,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginTop="@dimen/spacing_middle"
-                        android:background="@drawable/myinfo_card_bg_radius"
+                        android:background="@drawable/pgm_info_bg"
                         android:gravity="center"
                         android:orientation="horizontal">
 
@@ -160,7 +160,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_marginTop="10dp"
-                        android:background="@drawable/myinfo_card_bg_radius"
+                        android:background="@drawable/pgm_info_bg"
                         android:gravity="center">
 
                         <TextView
@@ -193,7 +193,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="@dimen/spacing_middle"
-                    android:background="@drawable/myinfo_card_bg_radius"
+                    android:background="@drawable/pgm_info_bg"
                     android:gravity="center"
                     android:orientation="horizontal">
 
@@ -227,7 +227,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="@dimen/spacing_middle"
-                    android:background="@drawable/myinfo_card_bg_radius"
+                    android:background="@drawable/pgm_info_bg"
                     android:gravity="center"
                     android:orientation="horizontal">
 
