--- a/mobile/android/rpm_android/app/src/main/res/values/colors.xml
+++ b/mobile/android/rpm_android/app/src/main/res/values/colors.xml
@@ -269,6 +269,7 @@
 <color name="light_green_A200">#B2FF59</color>
 <color name="light_green_A400">#76FF03</color>
 <color name="light_green_A700">#64DD17</color>
+<color name="chart_scroll_bg">#C5F2C7</color>
 
 <color name="amber_50">#FFF8E1</color>
 <color name="amber_100">#FFECB3</color>
