--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
@@ -138,7 +138,11 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
           <span>{{
-            datepipe.transform(element.CreatedOn, "MMM d, y")
+
+             datepipe.transform(
+                    convertToLocalTime(element.CreatedOn),
+                    "MMM d, yyyy"
+                  )
           }}</span></mat-cell
         >
       </ng-container>
@@ -149,7 +153,8 @@
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
           <span>{{
-            datepipe.transform(element.CreatedOn, "h:mm a")
+           datepipe.transform(convertToLocalTime(element.CreatedOn), "h: mm a")
+
           }}</span></mat-cell
         >
       </ng-container>
