--- a/mobile/android/rpm_android/app/src/main/res/layout/medication_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/medication_item.xml
@@ -6,6 +6,7 @@
     android:padding="10dp"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/cardContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/card_background_white"
