chat-panel-message-action-handled

--- a/web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.html
+++ b/web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.html
@@ -164,7 +164,7 @@
     </div>
   </div>
 
-  <div class="send-block">
+  <div class="send-block" *ngIf="patientChatService.LoginStatus">
     <textarea
       class="chatTypearea"
       [(ngModel)]="message"
