chat-panel-message-action

--- a/web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.html
+++ b/web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.html
@@ -165,7 +165,7 @@
   </div>
   <!-- placeholder="Type something..."
       (keydown)="currentConversation?.typing()"  -->
-  <div class="send-block">
+  <div class="send-block" *ngIf="patientChatService.LoginStatus">
     <textarea
       class="chatTypearea"
       [(ngModel)]="message"
