--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -1078,7 +1078,7 @@
               <div class="flex-program-details">
                 <div class="program_left_panel">
                   <div class="start_date">
-                    <div class="userInfoItem">
+                    <div class="userInfoItem" [ngClass]="{ 'disabled-div': true }">
                       <p class="main_input_title">*Program Name</p>
                       <select
                         class="userInfovalue"
