--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1092,5 +1092,8 @@ button:focus {
   border: none !important;
   margin: 0.2rem;
 }
+::ng-deep .autocomplete-container .input-container .x i {
+  font-size: 12px !important;
+}
 
 // Patient Login  Common Style
