merge-bugFix set-1 bugfix branch fixes

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -2276,7 +2276,7 @@ td.mat-cell:last-child {
   .summaryInfo {
     width: 98%;
   }
-
+}
 }
 @media only screen and (max-width: 980px) {
 .middle_panel {
