--- a/web/src/app/components/admin-dashboard/components/reports/components/billing-summary-report/billing-summary-report.component.html
+++ b/web/src/app/components/admin-dashboard/components/reports/components/billing-summary-report/billing-summary-report.component.html
@@ -46,7 +46,7 @@
           <div [innerHTML]="notFound"></div>
         </ng-template>
         <img
-          *ngIf="!selectedBillingPatient"
+          *ngIf="searchiconvisible"
           class="search_icon"
           src="../../../../../assets/04-Icons/Icons_Search Small.svg"
         />
