--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -3734,3 +3734,24 @@ li + li {
   border: 1px solid #e0e0e0;
   background-color: #f5f5f5;
 }
+.program_overview_value_panel{
+  max-height:100px;
+  overflow-y: auto;
+
+}
+.program_overview_value_panel::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #e0e0e0 !important;
+  border-radius: 10px !important;
+  background-color: #f5f5f5 !important;
+}
+
+.program_overview_value_panel::-webkit-scrollbar {
+  width: 6px !important;
+  background-color: #f5f5f5 !important;
+}
+
+.program_overview_value_panel::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px #98c7c8;
+  background-color: #edeff5;
+}
