bugfix front end issue

--- a/web/src/app/components/admin-dashboard/components/add-user/add-user.component.scss
+++ b/web/src/app/components/admin-dashboard/components/add-user/add-user.component.scss
@@ -18,6 +18,8 @@ input.ng-invalid.ng-touched {
 }
 .text-danger {
   color: rgb(212, 17, 17);
+    padding-left:16px;
+
 }
 .text-success {
   color: rgb(52, 129, 69);
