--- a/web/src/app/components/admin-dashboard/shared/side-bar/models/profile-menu-button/profile-menu-button.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-bar/models/profile-menu-button/profile-menu-button.component.html
@@ -207,4 +207,5 @@
     </div>
   </div>
 </ng-template>
-<app-status-dialog-box #statusDialog></app-status-dialog-box>
+<app-status-dialog-box  #statusDialog  (dialogClosed)="onDialogClosed()">
+</app-status-dialog-box>
