--- a/web/src/app/components/admin-dashboard/components/add-user/add-user.component.html
+++ b/web/src/app/components/admin-dashboard/components/add-user/add-user.component.html
@@ -35,10 +35,19 @@
               <div class="userInfoContent">
                 <div class="userInfoContLeft">
                   <div class="uploadPhoto">
-                    <img
-                      class="icon_camera"
-                      src="../../../assets/04-Icons/Icons_Camera.svg"
-                    />
+                   {{ file }}
+                      <img
+                         id="btnaddPatientImg"
+                         (click)="openFile()"
+                          class="icon_camera"
+                          src="../../../assets/04-Icons/Icons_Camera.svg"
+                         />
+                        <input
+                          id="image"
+                          type="file"
+                          style="display: none"
+                          (change)="handle($event)"
+                        />
                   </div>
                   <div class="userInfoItem">
                     <p class="userInfoTitle input_title">*Email ID</p>
